# wego_25winter_ws

./: .gitignore  QUICK_REFERENCE.md  ROUNDABOUT_IMPLEMENTATION.md  TOPIC_MAPPING.md  TRAFFIC_LIGHT_INTEGRATION.md  VALIDATION_CHECKLIST.md  deploy_traffic_light.sh  embedded_remotes.txt  lony_one_webot2.py  readme.md
decision_25/: CMakeLists.txt
decision_25/launch/: decision_25.launch
decision_25/src/: crosswalk_decision_node.cpp  main_node.cpp
decision_node/: README.MD  package.xml
decision_node/src/: main_node.cpp
decision_node/src/mission_ab/: mission_ab_right.cpp
decision_node/src/mission_crosswalk/: mission_crosswalk.cpp
decision_node/src/mission_gate/: gate.cpp  mission_gate.cpp
decision_node/src/mission_labacorn/: labacorn_solo.cpp
decision_node/src/mission_parking/: mission_parking.cpp
decision_node/src/mission_rotary/: roatry_solo.cpp
perception_25/launch/: perception_25.launch
perception_25/src/camera/: crosswalk_perception_node.cpp  lane_perception_node.cpp  roundabout_perception_node.cpp  traffic_light_perception_node.cpp
perception_25/src/lidar/: lidar_obstacle_perception_node.cpp
perception_node/: CMakeLists.txt  readme.txt
perception_node/config/: global_costmap_params.yaml
perception_node/launch/: ab_node.launch  camera_calibration.launch  camera_node.launch  crosswalk_node.launch  perception_node.launch
perception_node/scripts/lane_detectionpyt/: lane_kante_ver2_morai.py  lane_kante_ver2_wego_old.py
perception_node/src/ab_sign/: traffic_sign.py
perception_node/src/camera/: cap_images.cpp
perception_node/src/camera/ab_mission/: ab_node.cpp
perception_node/src/camera/crosswalk_mission/: crosswalk_node.cpp
perception_node/src/camera/lane_mission/: gate_camera_node.cpp  lane_center_node.cpp  lane_center_node_noise_debug.cpp  lane_color_node.cpp  lane_node.cpp
perception_node/src/lidar/gate_mission/: gate_lidar_fusion_node.cpp  gate_node.cpp
perception_node/src/lidar/parking_mission/: goal_pose_pub.cpp  lidar_preprocessing_parking.cpp  parking_lot_common.hpp  parking_lot_detection.cpp  parking_node.cpp
perception_node/src/lidar/rotary_mission/: lidar_preprocessing_rotary.hpp  rotary_node.cpp
perception_node/src/parking_sign/: parking_sign_detect.py
src/: README.MD  readme.md
src/decision_25/: package.xml
src/decision_25/launch/: complete_25.launch
src/decision_25/src/: lane_decision_node.cpp  obstacle_avoid_decision_node.cpp  roundabout_decision_node.cpp  traffic_light_decision_node.cpp
src/decision_node/: CMakeLists.txt
src/decision_node/launch/: mission_labacorn.launch  mission_lane.launch
src/decision_node/src/: hard_node.py  mission_bag_play.cpp
src/decision_node/src/mission_ab/: mission_ab_left.cpp
src/decision_node/src/mission_labacorn/: mission_labacorn.cpp
src/decision_node/src/mission_lane/: lane_solo.cpp  mission_lane.cpp
src/decision_node/src/mission_rotary/: mission_rotary.cpp
src/decision_wego/: CMakeLists.txt  only_one_webot.py  package.xml
src/decision_wego/config/: lane.yaml
src/decision_wego/launch/: decision_all.launch  only_one_webot.launch  parking_with_aruco.launch
src/decision_wego/scripts/: dh_lanefollow.py  main_node.py  mission_crosswalk.py  mission_lane.py  mission_lane_ver2.py  mission_obstacle.py  mission_parking.py  mission_traffic_light.py  obstacle_avoid_decision_solo.py  only_one_webot.py  only_one_webot_parking.py
src/decision_wego/scripts/wego_solo/: only_one_webot.py  only_one_webot_parking.py  red_traffic_debugging.py  yellow_corn_debugging.py
src/decision_wego/solo/: lane_check.py  lane_detect_decision_solo.py  traffic_light_solo.py
src/inha25-winter-ros/: README.md
src/inha25-winter-ros/wego/: CMakeLists.txt  package.xml
src/inha25-winter-ros/wego/cfg/: LaneDetect.cfg  Roundabout.cfg
src/inha25-winter-ros/wego/config/: aruco.yaml  lane_detect.yaml  parking.yaml  roundabout.yaml  traffic_light.yaml
src/inha25-winter-ros/wego/launch/: obstacle_avoid.launch  parking.launch  pedestrian.launch  roundabout.launch
src/inha25-winter-ros/wego/scripts/: aruco_lane_tuner.py  lane_detect_node.py  lane_detect_node_2.py  obstacle_avoid_node.py  pedestrian_node.py
src/inha25-winter-ros/wego/scripts/practice/: 02_roi.py  03_lidar_distance.py  05_sliding_window.py
src/perception_25/: CMakeLists.txt  package.xml
src/perception_node/: package.xml
src/perception_node/config/: cam_calibration.yaml  cam_calibration2.yaml  costmap_common_params.yaml  local_costmap_params.yaml  ost.yaml  teb_local_planner_params.yaml
src/perception_node/launch/: lidar_node.launch
src/perception_node/scripts/lane_detectionpyt/: lane_kante_ver2_wego.py
src/perception_node/scripts/marker_detectionpyt/: marker_detection.py
src/perception_node/src/camera/: gate_debugging.py
src/perception_node/src/camera/lane_mission/: lane_center_node_noise_debug_2.py
src/perception_node/src/lidar/labacorn_mission/: labacorn_node.cpp  lidar_preprocessing_labacorn.cpp  object_detect_laba.hpp
src/perception_node/src/lidar/rotary_mission/: clustering_visualization.hpp  obstacle_detect.hpp
src/perception_wego/: CMakeLists.txt  YELLOW_FILTER_DEBUG.md  package.xml
src/perception_wego/debug/: camera_capture_debug.py  camera_lane_detect_roi_debug.py  camera_traffic_light_debug.py  camera_yellow_filter_debug.py  lidar_gap_debug.py  lidar_yellow_gap_debug.py
src/perception_wego/launch/: perception_all.launch  wego_complete.launch
src/perception_wego/scripts/: aruco_detector_node.py  crosswalk_perception_node.py  lane_detect_perception.py  lane_detect_perception_ver2.py  lane_detect_roi_debug.py  obstacle_avoid_perception.py  traffic_light_detect_node.py  yellow_filter_debug.py  yellow_filter_debug_standalone.py
src/razor_imu_9dof/config/: razor.yaml
src/razor_imu_9dof/nodes/: imu_node.py
src/usb_cam/calibration/: usb_cam copy.yaml  usb_cam.yaml
src/usb_cam/launch/: usb_cam-test.launch
src/usb_cam/nodes/: usb_cam_node.cpp.autosave
src/wego/: README.md
src/wego/cfg/: ObstacleAvoid.cfg  (+2 more)
src/wego_cfg/: CMakeLists.txt  package.xml
src/wego_cfg/cfg/: LaneDetect.cfg
(+22 files in other folders)
